5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1582_1330.log
== TEST (2019-03-14 16:09:24) 
-- CODE:
round(250, 6)
-- OUTPUT:
65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:09:25) 
-- CODE:
round(250, 6)
-- EXECUTION TIME:
0.151633
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:09:40) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:09:42) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.127097
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:10:48) 
-- CODE:
print(250/6)round(250, 1)
-- ERROR:
File "XXXX", line 1
    print(250/6)round(250, 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:10:49) 
-- CODE:
print(250/6)round(250, 1)
-- EXECUTION TIME:
0.140218
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    print(250/6)round(250, 1)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:11:26) 
-- CODE:
round(250/6)
-- ERROR:
File "XXXX", line 1
    print(250/6)round(250, 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:11:27) 
-- CODE:
round(250/6)
-- EXECUTION TIME:
0.149411
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:12:11) 
-- CODE:
round(250/6)
print(round(r,2))
-- EXECUTION TIME:
0.193813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 2, in <module>
    print(round(r,2))
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:12:40) 
-- CODE:
r=250/6
print(round(r,2))
-- EXECUTION TIME:
0.249825
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
